# cmake_with_multi_directories

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/includes/: lib_test.hpp
lib/src/: lib_test.cpp
src/: main.cpp  test.cpp
